--- a/x25519/Makefile
+++ b/x25519/Makefile
@@ -4,32 +4,21 @@ DEVICE=um5g-85k
 PACKAGE=CABGA381
 PINCONSTRAINTS=ecp5-evn.lpf
 BITSTREAM=top_ecp5.svf
-TIMINGREPORT=
 
 #QUIET=-q
 #QUIET=--verbose --debug
 
-TESTBENCHES=$(wildcard *_tb.v)
-TESTS=$(TESTBENCHES:%.v=%.test)
-
-.PHONY: all prog run_tests clean
+.PHONY: all prog sim clean
 
 .PRECIOUS: %.json %.asc %.bin %.rpt %.txtcfg
 
+X25519_RTL = csa.v addmod.v submod.v multmod.v inv_montgomery.v point_add.v \
+	scalarmultB.v
 
-all: $(BITSTREAM) $(TIMINGREPORT)
+all: $(BITSTREAM)
 
 prog: $(BITSTREAM)
 	openocd -f ecp5-evn.openocd.conf -c "transport select jtag; init; svf progress quiet $<; exit"
-
-
-run_tests: $(TESTS)
-	make -C verilog-buildingblocks run_tests
-	@for test in $^; do \
-		echo $$test; \
-		./$$test; \
-	done
-
 
 clean:
 	-rm -f *.json
@@ -40,25 +29,21 @@ clean:
 	-rm -f *.svf
 	-rm -f *_tb.test
 	-rm -f *.vvp
+	-rm -f *.vcd
 	-rm -f *.out
 	-rm -f *~
 
-top.v: csa.v addmod.v submod.v multmod.v inv_montgomery.v point_add.v \
-	scalarmultB.v
+top_$(ARCH).json: top.v $(X25519_RTL)
 
-top_$(ARCH).json: top.v
 
-tb.v: csa.v addmod.v submod.v multmod.v inv_montgomery.v point_add.v \
-	scalarmultB.v
-
-tb.vvp: tb.v
+tb.vvp: tb.v $(X25519_RTL)
 	iverilog -s testbench -o $@ $^
 
 sim: tb.vvp
 	vvp -N $<
 	gtkwave testbench.vcd soc.gtkw
 
-%_ecp5.json: %.v
+%_ecp5.json: %.v $(X25519_RTL)
 	yosys -Q $(QUIET) -p 'synth_ecp5 -nomux -top $(subst .v,,$<) -json $@' $^
 
 %_ecp5.txtcfg: %_ecp5.json
